--- a/css/layout.css
+++ b/css/layout.css
@@ -97,8 +97,6 @@ li {
     color: white;
 }
 
-.bodyWrapper {}
-
 .section {
     background: white;
     max-width: 1500px;
